--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="space">***</string>
     <string name="episodes">Episodes</string>
     <string name="website">Website</string>
+    <string name="title_app_name">TV SHOW</string>
 </resources>
