--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="episodes">Episodes</string>
     <string name="website">Website</string>
     <string name="title_app_name">TV SHOW</string>
+    <string name="watch_list">WatCH List</string>
 </resources>
