--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="episodes">Episodes</string>
     <string name="website">Website</string>
     <string name="title_app_name">TV SHOW</string>
-    <string name="watch_list">WatCH List</string>
+    <string name="watch_list">Watchlist</string>
     <string name="search_tvshow">Search tvshow</string>
 </resources>
